--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "hygen": "hygen",
+    "cc": "hygen create component"
   },
   "dependencies": {
     "clsx": "^2.0.0",
@@ -32,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-plugin-storybook": "^0.6.15",
+    "hygen": "^6.2.11",
     "storybook": "^7.6.2",
     "typescript": "^5"
   }
