--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "sass": "^1.69.5"
+    "react-sortablejs": "^6.1.4",
+    "sass": "^1.69.5",
+    "sortablejs": "^1.15.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.2",
@@ -32,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sortablejs": "^1.15.7",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-plugin-storybook": "^0.6.15",
