--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^4.12.0",
     "react-sortablejs": "^6.1.4",
     "sass": "^1.69.5",
-    "sortablejs": "^1.15.1"
+    "sortablejs": "^1.15.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.2",
