--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cc": "hygen create component"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
